added home screen features such as streak, session etc
